--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,4 +1,4 @@
-@media(max-width:1100px) {
+@media(max-width:765px) {
 
     body {
         background: url(../images/bg-mobile.svg) center center no-repeat;
@@ -70,3 +70,66 @@
         margin-top: 80px;
     }
 }
+
+@media(max-width:1100px) {
+
+    body {
+        background: url(../images/bg-mobile.svg) center center no-repeat;
+        background-color: hsl(257, 40%, 49%);
+        background-size: cover;
+        margin: 0;
+        padding: 0;
+    }
+
+    .main{
+        max-width: 760px;
+    }
+
+    .logo img{
+        width: 60%;
+    }
+    .container {
+        flex-direction: column;
+        text-align: center;
+        max-width:100%;
+    }
+
+    .foto {
+        max-width: 100%;
+        
+    }
+
+    .container .informations .button{
+        text-decoration: none;
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        color: hsl(257, 40%, 49%);
+        font-weight: 700;
+        border-radius: 50px;
+        margin: 10px 20%;
+        width: 190px;
+        margin-left: 220px;
+        height: 60px;
+        transition: 0.3s ease-in-out;
+    }
+
+    .informations .button:hover{
+        color: #fff;
+        background-color: rgb(225, 122, 225);
+    }
+
+    .footer {
+        align-self: center;
+        width: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 25%;
+        margin-top: 50px;
+    }
+    
+}
+
